bdr.BDR2.scala.error
Erreur de compilation :
BDR2:6: error: not found: value ecriture
  ecriture match {
  ^BDR2:72: error: reassignment to val
    fini = true
         ^